--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ node_modules/
 config/config.json
 .env
 coverage/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
