--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql2": "^3.4.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "redis": "^4.6.7",
     "sequelize": "^6.32.1",
     "uuid": "^9.0.0"
   },
