--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "mysql2": "^3.4.0",
+    "openai": "^3.3.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "redis": "^4.6.7",
