--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "eb deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-polly": "^3.363.0",
     "bcrypt": "^5.1.0",
     "check-password-strength": "^2.0.7",
     "cookie-parser": "~1.4.4",
@@ -34,6 +35,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "aws-sdk-client-mock": "^3.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "sequelize-cli": "^6.6.1",
