M2-102: Integrates Solana transfers on game completion

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-polly": "^3.363.0",
+    "@solana/spl-token": "^0.3.4",
+    "@solana/web3.js": "1.56",
     "bcrypt": "^5.1.0",
     "check-password-strength": "^2.0.7",
     "cookie-parser": "~1.4.4",
