Adds back-end work for M2-44 and M2-100

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@solana/web3.js": "1.56",
     "bcrypt": "^5.1.0",
     "check-password-strength": "^2.0.7",
+    "cloudinary": "^1.37.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
