--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-handlebars": "^5.3.2",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "is-email": "^1.0.2",
