--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "^4.0.1",
     "redis": "^4.6.7",
     "sequelize": "^6.32.1",
+    "slugify": "^1.6.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
